
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,...) ;

void
dump(const unsigned char *p, unsigned l)
{
 printf("sockaddr_irda:");
 while (l > 0) {
  printf(" ");
  if (l == 33 || l == 28) {
   printf("<<< ");
  }
  printf("%02x", *p);
  if (l == 33 || l == 1) {
   printf(" >>>");
  }
  ++p; --l;
 }
 printf("\n");
}
